Bug 689771 - Regression: epswrite produces bad output
Summary: Regression: epswrite produces bad output
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Writer (show other bugs)
Version: master
Hardware: PC Linux
: P2 normal
Assignee: Alex Cherepanov
URL:
Keywords:
: 689785 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-03-27 18:27 UTC by Marcos H. Woehrmann
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer: 73
Word Size: ---


Attachments
in.eps (4.11 KB, image/x-eps)
2008-03-27 18:28 UTC, Marcos H. Woehrmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2008-03-27 18:27:30 UTC
The customer reports and I've confirmed that recent versions of Ghostscript,
including gshead (r8611), produce bad EPS files from the attached file when
using -sDEVICE=epswrite.

I've identified the first version that demonstrates this problem as r8233, which
based on the log message seems plausible:

  Make pswrite and epswrite devices generate proper line-interleaved image
  stream even when they receive several scan lines at once. This happens when
  the source image operator takes large strings as multiple data sources.

The commands I'm using for testing:

  bin/gs -sDEVICE=epswrite -sOutputFile=test.eps ./in.eps
  bin/gs -sDEVICE=ppmraw -sOutputFile=test.ppm -r300 ./test.eps
Comment 1 Marcos H. Woehrmann 2008-03-27 18:28:01 UTC
Created attachment 3900 [details]
in.eps
Comment 2 Alex Cherepanov 2008-03-28 06:17:58 UTC
I've committed the rev. 8233 and would like to fix this bug.
Comment 3 Ken Sharp 2008-03-28 06:28:43 UTC
Fine with me Alex, want to re-assign it to yourself ?
Comment 4 Alex Cherepanov 2008-03-31 17:35:08 UTC
Fix incorrect scanline length calculation in 1 bit/component images on pswrite
and epswrite devices.

A patch is committed as a rev. 8617.
http://ghostscript.com/pipermail/gs-cvs/2008-March/008203.html

pswrite and epswrite devices are not yet covered by regression testing.
Comment 5 Alex Cherepanov 2008-04-07 11:35:38 UTC
*** Bug 689785 has been marked as a duplicate of this bug. ***