Fix incorrect scanline length calculation in 1 bit/component images on pswrite and epswrite devices. The bug was introduced in rev. 8233. Bug 689771, customer 73.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8617 a1074d23-0009-0410-80fe-cf8c14f379e6