gs/src/gdevps.c
@@ -1622,7 +1622,7 @@ psw_image_plane_data(gx_image_enum_common_t * info,
 	        return_error(gs_error_rangecheck);
 	    psw_put_bits(pdev->image_stream,
                 planes[pi].data,
-		planes[pi].data_x*info->plane_depths[pi] + pie->bits_per_row*j,
+		planes[pi].data_x*info->plane_depths[pi] + planes[pi].raster*j*8,
 		planes[pi].raster,
                 pie->bits_per_row,
 		1 );
